--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "prisma": {
     "schema": "data/prisma/schema.prisma"
   },
-  "author": "Marcelo Antunes Fernandes",
+  "author": "Alexandre Santos, Antonio Gomes, Gilberto Parente",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.2"
   },
   "devDependencies": {
     "webpack-cli": "^5.1.4"
